# dump

./: CMakeLists.txt  GitNotes.txt  README.md  formula.h  functions.cpp  functions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl.cpp  opengl.h  readme.md  sc.cpp  sc.h  sc_engine.cpp  sc_engine.h  sc_motion.cpp  sc_motion.h  sc_struct.h  scurve.h
.github/workflows/: blank.yml
